--- a/du.tools.explorer/pom.xml
+++ b/du.tools.explorer/pom.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0"?>
 <project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>du.tools</groupId>
-		<artifactId>du.tools.parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
-	<groupId>du.tools.explorer</groupId>
-	<artifactId>du.tools.explorer</artifactId>
-	<name>du.tools.explorer</name>
-	
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-	<dependencies>
-	<dependency>
-		<groupId>du.swingx</groupId>
-		<artifactId>du.swingx</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</dependency>
-	</dependencies>
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+        xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>du.tools</groupId>
+        <artifactId>du.tools.parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+    <groupId>du.tools.explorer</groupId>
+    <artifactId>du.tools.explorer</artifactId>
+    <name>du.tools.explorer</name>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.51</version>
+        </dependency>
+    </dependencies>
 </project>
