--- a/du.tools.main/pom.xml
+++ b/du.tools.main/pom.xml
@@ -11,49 +11,76 @@
     <artifactId>du.tools.main</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>3.6.2.201501210735-r</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.51</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna-platform</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jzlib</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
 
         <!--Import IntelliJ lib and plugin-->
         <dependency>
-            <groupId>jna</groupId>
-            <artifactId>jna</artifactId>
-            <version>3.4.0</version>
+            <groupId>annotations</groupId>
+            <artifactId>annotations</artifactId>
+            <version>0.0</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/../../lib/jna.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>jna</groupId>
-            <artifactId>jna-utils</artifactId>
-            <version>3.4.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../../lib/jna-utils.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>14.0.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../../lib/guava-14.0.1.jar</systemPath>
+            <systemPath>${project.basedir}/lib/annotations.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>pty4j</groupId>
             <artifactId>pty4j</artifactId>
             <version>0.3</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/../../lib/pty4j-0.3.jar</systemPath>
+            <systemPath>${project.basedir}/lib/pty4j-0.3.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>purejavacomm</groupId>
             <artifactId>purejavacomm</artifactId>
-            <version>1.0</version>
+            <version>0.0.17</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/../../lib/purejavacomm.jar</systemPath>
+            <systemPath>${project.basedir}/lib/purejavacomm-0.0.17.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>jediterm-pty</groupId>
             <artifactId>jediterm-pty</artifactId>
-            <version>1.0</version>
+            <version>2.0</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/../../lib/jediterm-pty-1.0.jar</systemPath>
+            <systemPath>${project.basedir}/lib/jediterm-pty-2.0.jar</systemPath>
         </dependency>
     </dependencies>
 
