--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,10 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>du.tools.main</module>
-    <module>du.tools.explorer</module>
-  </modules>
+        <module>du.tools.explorer</module>
+        <module>du.tools.terminal</module>
+        <!--<module>du.tools.mq</module>-->
+    </modules>
     <packaging>pom</packaging>
 
     <properties>
@@ -16,6 +18,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>du.swingx</groupId>
+            <artifactId>du.swingx</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
@@ -31,7 +39,6 @@
             <artifactId>commons-beanutils</artifactId>
             <version>1.9.2</version>
         </dependency>
-
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -42,11 +49,7 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.6</version>
         </dependency>
-        <dependency>
-            <groupId>com.jcraft</groupId>
-            <artifactId>jsch</artifactId>
-            <version>0.1.51</version>
-        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
