--- a/du.tools.main/pom.xml
+++ b/du.tools.main/pom.xml
@@ -12,6 +12,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>du.tools</groupId>
+            <artifactId>du.tools.terminal</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.8.1</version>
@@ -26,62 +31,15 @@
             <artifactId>org.eclipse.jgit</artifactId>
             <version>3.6.2.201501210735-r</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.jcraft</groupId>
-            <artifactId>jsch</artifactId>
-            <version>0.1.51</version>
-        </dependency>
-        <dependency>
-            <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna</artifactId>
-            <version>4.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna-platform</artifactId>
-            <version>4.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.jcraft</groupId>
-            <artifactId>jzlib</artifactId>
-            <version>1.1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>18.0</version>
-        </dependency>
-
-        <!--Import IntelliJ lib and plugin-->
-        <dependency>
-            <groupId>annotations</groupId>
-            <artifactId>annotations</artifactId>
-            <version>0.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/annotations.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>pty4j</groupId>
-            <artifactId>pty4j</artifactId>
-            <version>0.3</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/pty4j-0.3.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>purejavacomm</groupId>
-            <artifactId>purejavacomm</artifactId>
-            <version>0.0.17</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/purejavacomm-0.0.17.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>jediterm-pty</groupId>
-            <artifactId>jediterm-pty</artifactId>
-            <version>2.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/jediterm-pty-2.0.jar</systemPath>
-        </dependency>
     </dependencies>
 
+    <build>
+        <resources>
+            <resource>
+                <filtering>false</filtering>
+                <directory>${basedir}/src/main/resources</directory>
+                <targetPath>${build.directory}/classes</targetPath>
+            </resource>
+        </resources>
+    </build>
 </project>
